# Evolution-of-Todo-Hackathon

./: README.md
Phase-II-Todo-Full-Stack-Web-Application/todo-web-app/: .gitignore  GEMINI.md  README.md  pyproject.toml
Phase-II-Todo-Full-Stack-Web-Application/todo-web-app/.specify/memory/: constitution.md
Phase-II-Todo-Full-Stack-Web-Application/todo-web-app/history/prompts/003-full-stack-webapp/: 10-restructure-profile-page-to-two-column-layout.refactor.prompt.md  10-revert-corrected-redesign-of-homepage-feature-section.misc.prompt.md  100-expand-webgl-blob-animation-spread-in-hero-section.refactor.prompt.md  101-ensure-webgl-background-covers-full-hero-section-viewport.bugfix.prompt.md  102-revert-webgl-background-and-remove-related-components-packages.misc.prompt.md  (+117 more)
Phase-II-Todo-Full-Stack-Web-Application/todo-web-app/specs/003-full-stack-webapp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
Phase-II-Todo-Full-Stack-Web-Application/todo-web-app/src/backend/: README.md  alembic.ini  database.py  dependencies.py  main.py  models.py  pyproject.toml  schemas.py  security.py  test.db
Phase-II-Todo-Full-Stack-Web-Application/todo-web-app/src/cli/: main.py
Phase-II-Todo-Full-Stack-Web-Application/todo-web-app/src/frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
Phase-II-Todo-Full-Stack-Web-Application/todo-web-app/src/models/: task.py
Phase-II-Todo-Full-Stack-Web-Application/todo-web-app/src/services/: task_manager.py
Phase-II-Todo-Full-Stack-Web-Application/todo-web-app/tests/integration/: test_interactive_cli.py
Phase-II-Todo-Full-Stack-Web-Application/todo-web-app/tests/unit/: test_task_manager.py
(+25 files in other folders)
